5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1865_1536.log
== TEST (2019-07-04 10:32:16) 
-- CODE:
x=float(input(""))
i=1
soma=0

while(i>):
	soma=soma*(-1**i)*((x**i)/i)
	i=i+1
print()
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:32:33) 
-- CODE:
x=float(input(""))
i=1
soma=0

while(x>i):
	soma=soma*(-1**i)*((x**i)/i)
	i=i+1
print(soma)
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:32:45) 
-- CODE:
x=float(input(""))
i=1
soma=0

while(x>i):
	soma=soma*(-1**i)*((x**i)/i)
	i=i+1
print(soma)
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:32:54) 
-- CODE:
x=float(input(""))
i=1
soma=0

while(i>0):
	soma=soma*(-1**i)*((x**i)/i)
	i=i+1
print(soma)
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:33:10) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i>0):
	soma=soma*(-1**i)*((x**i)/i)
	i=i+1
print(soma)
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:33:16) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i>0):
	soma=soma*(-1**i)*((x**i)/i)
	i=i+1
print(soma)
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:33:19) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i>0):
	soma=soma*(-1**i)*((x**i)/i)
	i=i+1
print(soma)
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:33:21) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i>0):
	soma=soma*(-1**i)*((x**i)/i)
	i=i+1
print(soma)
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:33:30) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i>0):
	soma=soma+(-1**i)*((x**i)/i)
	i=i+1
print(soma)
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:34:29) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i>0):
	soma=soma+((-1)**i)*x*((x**i)/i)
	i=i+1
print(soma)
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:34:33) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i>0):
	soma=soma+((-1)**i)*x*((x**i)/i)
	i=i+1
print(soma)
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:34:46) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i>0):
	soma=soma+((-1)**i)*x*((x**i)/i)
	i=i+1
print(i)
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:36:11) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i>0):
	soma=soma+((-1)**i)*x*((x**i)/i)
	i=i+1
print(soma)
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:36:18) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i>0):
	soma=soma+((-1)**i)*x*((x**i)/i)
	i=i+1
print(soma)
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:36:35) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i>x):
	soma=soma+((-1)**i)*x*((x**i)/i)
	i=i+1
print(soma)
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:36:38) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i>x):
	soma=soma+((-1)**i)*x*((x**i)/i)
	i=i+1
print(soma)
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:36:41) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i>x):
	soma=soma+((-1)**i)*x*((x**i)/i)
	i=i+1
print(soma)
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:36:48) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i<x):
	soma=soma+((-1)**i)*x*((x**i)/i)
	i=i+1
print(soma)
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:36:53) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i<x):
	soma=soma+((-1)**i)*x*((x**i)/i)
	i=i+1
print(soma)
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:38:02) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i>0):
	soma=soma+((-1)**i)*((x**i)/i)
	i=i+1
print(soma)
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:38:07) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i>0):
	soma=soma+((-1)**i)*((x**i)/i)
	i=i+1
print(soma)
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:40:07) 
-- CODE:
x=float(input("x: "))
i=1
soma=1

while(i>):
	soma=soma+((-1)**i)*((x**i)/i)
	i=i+1
print(soma)
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:40:12) 
-- CODE:
x=float(input("x: "))
i=1
soma=1

while(i>0):
	soma=soma+((-1)**i)*((x**i)/i)
	i=i+1
print(soma)
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:40:15) 
-- CODE:
x=float(input("x: "))
i=1
soma=1

while(i>0):
	soma=soma+((-1)**i)*((x**i)/i)
	i=i+1
print(soma)
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:40:27) 
-- CODE:
x=float(input("x: "))
i=1
soma=1

while(i>0):
	soma=soma*((-1)**i)*((x**i)/i)
	i=i+1
print(soma)
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:40:33) 
-- CODE:
x=float(input("x: "))
i=1
soma=1

while(i>0):
	soma=soma*((-1)**i)*((x**i)/i)
	i=i+1
print(soma)
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:40:44) 
-- CODE:
x=float(input("x: "))
i=1
soma=1

while(i>0):
	soma=soma*((-1)**i)*((x**i)/i)
	i=i+1
print(soma)
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:40:47) 
-- CODE:
x=float(input("x: "))
i=1
soma=1

while(i>0):
	soma=soma*((-1)**i)*((x**i)/i)
	i=i+10
print(soma)
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:40:55) 
-- CODE:
x=float(input("x: "))
i=1
soma=1

while(i>0):
	soma=soma*((-1)**i)*((x**i)/i)
	i=i+10
print(soma)
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:41:14) 
-- CODE:
x=float(input("x: "))
i=0
soma=0

while(i>):
	soma=soma*((-1)**i)*((x**i)/i)
	i=i+10
print(soma)
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:41:16) 
-- CODE:
x=float(input("x: "))
i=0
soma=0

while(i>):
	soma=soma*((-1)**i)*((x**i)/i)
	i=i+10
print(soma)
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:41:20) 
-- CODE:
x=float(input("x: "))
i=0
soma=0

while(i>0):
	soma=soma*((-1)**i)*((x**i)/i)
	i=i+10
print(soma)
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 10:41:27) 
-- CODE:
x=float(input("x: "))
i=0
soma=0

while(i>0):
	soma=soma*((-1)**i)*((x**i)/i)
	i=i+10
print(soma)
-- EXECUTION TIME:
0.728968
-- TEST CASE 1:
---- input:
0.2
12
---- correct output:
0.1823215567
---- user output:
0
-- TEST CASE 2:
---- input:
0.62
4
---- correct output:
0.4703018267
---- user output:
0
-- TEST CASE 3:
---- input:
0.56
2
---- correct output:
0.4032
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:41:35) 
-- CODE:
x=float(input("x: "))
i=0
soma=0

while(i>0):
	soma=soma*((-1)**i)*((x**i)/i)
	i=i+10
print(soma)
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:41:55) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i>x):
	soma=soma*((-1)**i)*((x**i)/i)
	i=i+10
print(soma)
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:41:59) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i>x):
	soma=soma*((-1)**i)*((x**i)/i)
	i=i+10
print(soma)
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:42:01) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i>x):
	soma=soma*((-1)**i)*((x**i)/i)
	i=i+10
print(soma)
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:42:10) 
-- CODE:
x=float(input("x: "))
i=0
soma=1

while(i>x):
	soma=soma*((-1)**i)*((x**i)/i)
	i=i+10
print(soma)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:42:13) 
-- CODE:
x=float(input("x: "))
i=0
soma=1

while(i>x):
	soma=soma*((-1)**i)*((x**i)/i)
	i=i+10
print(soma)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:42:15) 
-- CODE:
x=float(input("x: "))
i=0
soma=1

while(i>x):
	soma=soma*((-1)**i)*((x**i)/i)
	i=i+10
print(soma)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:42:29) 
-- CODE:
x=float(input("x: "))
i=0
soma=1

while(i>0):
	soma=soma*((-1)**i)*((x**i)/i)
	i=i+10
print(soma)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:42:34) 
-- CODE:
x=float(input("x: "))
i=0
soma=1

while(i>0):
	soma=soma*((-1)**i)*((x**i)/i)
	i=i+10
print(soma)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:42:40) 
-- CODE:
x=float(input("x: "))
i=0
soma=0

while(i>0):
	soma=soma*((-1)**i)*((x**i)/i)
	i=i+10
print(soma)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:42:55) 
-- CODE:
x=float(input("x: "))
i=0
soma=52

while(i>0):
	soma=soma*((-1)**i)*((x**i)/i)
	i=i+10
print(soma)
-- OUTPUT:
52
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:44:11) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i>0):
	soma=soma*((-1)**i)*((x**i)/i)
	i=i+1
print(i)
-- OUTPUT:
52
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:44:15) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i>0):
	soma=soma*((-1)**i)*((x**i)/i)
	i=i+1
print(i)
-- OUTPUT:
52
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:44:16) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i>0):
	soma=soma*((-1)**i)*((x**i)/i)
	i=i+1
print(i)
-- OUTPUT:
52
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:44:18) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i>0):
	soma=soma*((-1)**i)*((x**i)/i)
	i=i+1
print(i)
-- OUTPUT:
52
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:45:22) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i>):
	soma=soma*((-1)**i)*((x**i)/i)
	i=i+1
print(round(soma))
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:45:29) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i>0):
	soma=soma*((-1)**i)*((x**i)/i)
	i=i+1
print(round(soma))
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:45:34) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i>0):
	soma=soma*((-1)**i)*((x**i)/i)
	i=i+1
print(round(soma))
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:45:50) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i=0):
	soma=soma*((-1)**i)*((x**i)/i)
	i=i+1
print(round(soma))
-- ERROR:
File "XXXX", line 5
    while(i=0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:45:52) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i=0):
	soma=soma*((-1)**i)*((x**i)/i)
	i=i+1
print(round(soma))
-- ERROR:
File "XXXX", line 5
    while(i=0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:48:54) 
-- CODE:
x=float(input("x: "))
i=1
soma=0


while(i>1):
	soma=soma+((-1)**i)*((x**i)/i)
	i=i+1
print(round(soma,10))
-- ERROR:
File "XXXX", line 5
    while(i=0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:48:59) 
-- CODE:
x=float(input("x: "))
i=1
soma=0


while(i>1):
	soma=soma+((-1)**i)*((x**i)/i)
	i=i+1
print(round(soma,10))
-- ERROR:
File "XXXX", line 5
    while(i=0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:50:49) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i>0):
	soma=soma*((-1)**i)*((x**i)/i)
	i=i+1
print(round(soma,10))
-- ERROR:
File "XXXX", line 5
    while(i=0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:50:55) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i>0):
	soma=soma*((-1)**i)*((x**i)/i)
	i=i+1
print(round(soma,10))
-- ERROR:
File "XXXX", line 5
    while(i=0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:53:29) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i>0):
	soma=soma+((-1)**i)*((x**i)/i)
	i=i+1
print(round(soma,10))
-- ERROR:
File "XXXX", line 5
    while(i=0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:53:33) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i>0):
	soma=soma+((-1)**i)*((x**i)/i)
	i=i+1
print(round(soma,10))
-- ERROR:
File "XXXX", line 5
    while(i=0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:53:35) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i>0):
	soma=soma+((-1)**i)*((x**i)/i)
	i=i+1
print(round(soma,10))
-- ERROR:
File "XXXX", line 5
    while(i=0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:54:54) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i>):
	soma=soma*(x*((-1)**i))*((x**i)/i)
	i=i+1
print(round(soma,10))
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-04 10:55:03) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i>0):
	soma=soma*(x*((-1)**i))*((x**i)/i)
	i=i+1
print(round(soma,10))
-- ERROR:
File "XXXX", line 5
    while(i>):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 11:45:01) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i>0):
	soma=soma*((-1)**i)*((x**i)/i)
	i=i+1
print(round(soma,10))
-- EXECUTION TIME:
1088.03
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 11:47:01) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i>0):
	soma=soma*((-1)**i)*((x**i)/i)
	i=i+1
print(round(soma,10))
-- EXECUTION TIME:
1098.15
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-04 11:48:01) 
-- CODE:
x=float(input("x: "))
i=1
soma=0

while(i>0):
	soma=soma*((-1)**i)*((x**i)/i)
	i=i+1
print(round(soma,10))
-- EXECUTION TIME:
1211.57
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
